<resources>
    <string name="app_name">tfs2</string>
    <string name="name_recipe">Рецепты</string>
    <string name="name_products">Продукты</string>
    <string name="name_catalog">Каталог</string>
    <string name="hint_search">Поиск</string>
    <string name="button_addProduct">Добавить продукт</string>
    <string name="new_product">Новый продукт</string>
    <string name="hint_date">Срок годности</string>
    <string name="hint_product_name">Название</string>
    <string name="button_add">Добавить</string>
    <string name="button_cancel">Отменить</string>
    <string name="desc_delete">Удалить продукт</string>
    <string name="api_key">2bbbcf5dde99429780f598bef2616313</string>
</resources>